--- a/src/main/webapp/resources/admin_css/admin_css.css
+++ b/src/main/webapp/resources/admin_css/admin_css.css
@@ -27,6 +27,22 @@
   cursor: pointer;
 }
 
+.gdsImg {
+  padding: 6px 25px;
+  background-color:#28a745;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+	
+}
+
+.select_img img {
+	
+	margin-top: 20px;
+	
+	
+}
+
 .uploadResult ul li {
 	
 	list-style-type: none;
@@ -39,4 +55,11 @@
 .uploadResult ul li span {
 	
 	padding-right: 10px;
+}
+
+.category-section {
+	
+	text-align: left;
+    padding-left: 50px;
+		
 }
